--- a/GobQuiz/app/src/main/res/layout/activity_game.xml
+++ b/GobQuiz/app/src/main/res/layout/activity_game.xml
@@ -1,69 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.app.gobquiz.Controleur.GameActivity">
+    tools:context="fr.fcomte.univ.iut.martin.florent.topquiz.views.GameActivity">
 
     <TextView
-        android:id="@+id/activity_game_question_txt"
+        android:id="@+id/question_text"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="2"
-        android:textColor="@color/colorPrimary"
-        android:layout_marginTop="5dp"
         android:layout_marginBottom="5dp"
-        android:layout_marginStart="15dp"
         android:layout_marginEnd="15dp"
-        android:textSize="18sp"
-        android:textStyle="bold"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="5dp"
+        android:layout_weight="2"
         android:gravity="center"
-        android:text="Question?"/>
+        android:textSize="18sp"
+        android:textStyle="bold" />
 
     <Button
-        android:id="@+id/activity_game_answer1_btn"
+        android:id="@+id/answer1_btn"
+        style="@style/AnswerButtonTheme"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_margin="5dp"
-        android:layout_weight="1"
-        android:textColor="@color/colorAccent"
-        android:background="@android:color/white"
-        android:textSize="20sp"
-        android:text="Answer1"/>
+        android:layout_height="wrap_content"
+        android:tag="1" />
 
     <Button
-        android:id="@+id/activity_game_answer2_btn"
+        android:id="@+id/answer2_btn"
+        style="@style/AnswerButtonTheme"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_margin="5dp"
-        android:layout_weight="1"
-        android:textColor="@color/colorAccent"
-        android:background="@android:color/white"
-        android:textSize="20sp"
-        android:text="Answer2"/>
+        android:layout_height="wrap_content"
+        android:tag="2" />
 
     <Button
-        android:id="@+id/activity_game_answer3_btn"
+        android:id="@+id/answer3_btn"
+        style="@style/AnswerButtonTheme"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_margin="5dp"
-        android:layout_weight="1"
-        android:textColor="@color/colorAccent"
-        android:background="@android:color/white"
-        android:textSize="20sp"
-        android:text="Answer3"/>
+        android:layout_height="wrap_content"
+        android:tag="3" />
 
     <Button
-        android:id="@+id/activity_game_answer4_btn"
+        android:id="@+id/answer4_btn"
+        style="@style/AnswerButtonTheme"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_margin="5dp"
-        android:layout_weight="1"
-        android:textColor="@color/colorAccent"
-        android:background="@android:color/white"
-        android:textSize="20sp"
-        android:text="Answer4"/>
+        android:layout_height="wrap_content"
+        android:tag="4" />
 
 </LinearLayout>
